# python-legistar-scraper

./: .coveragerc  .gitignore  .python_history  .travis.yml  AUTHORS  LICENSE  README.md  README.rst  advanced_search.html  advanced_search_test.html  chicago.py  ctlspec.py  domains.csv  jurisdictions-to-add.txt  madison.py  newyorkcity.py  nychome.html  prof.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  simple.py
.github/workflows/: pythonapp.yml
chicago/: __init__.py  bills.py
legistar/: __init__.py  base.py  bill_search.py  bills.py  cli.py  client.py  config.py  cow.py  detailpage.py  detailview.py  events.py  fields.py  forms.py  jurisdictions.py  jxn_config.py  orgs.py  people.py  pupatypes.py  rootview.py  run.py  scrapers.py  selenium_client.py  settings.py  table.py  tables.py  view.py  views.py  visitors.py
legistar/base/: ctx.py  detailview.py  field.py  form.py  searchview.py  table.py  view.py
legistar/cities/: chicago.py  madison.py  newyorkcity.py  philadelphia.py
legistar/events/: field.py
legistar/events/detail/: form.py  table.py  view.py
legistar/events/search/: form.py  table.py  view.py
legistar/ext/: pupa.py
legistar/ext/pupa/: __init__.py  base.py  bills.py  events.py  get_organizations.py  orgs.py  people.py  (+1 more)
legistar/jurisdictions/: base.py  config.py  nyc.py  utils.py
legistar/old/: base.py  bills.py  config.py  detailpage.py  elements.py  events.py  forms.py  orgs.py  people.py  selenium_client.py  views.py
legistar/pupa/: __init__.py  base.py  bills.py  events.py  get_organizations.py  orgs.py  people.py  scrapers.py
legistar/tests/: test_Base.py  test_CtxMixin.py
legistar/utils/: handythings.py  itemgenerator.py
nyc_legistar/: app.py
nyc_legistar/scrape/: components.py
nyc_legistar/utils/: client.py
sacramento/: __init__.py  people.py
scripts/: domains.csv  guessdomains.py  mitmflow.py  pagination_destruction.py
src/legistar/: __init__.py
tests/: conftest.py  refresh_fixtures.py  run-core-tests.sh  run-tests.sh  scrapertest_base.py  test_ItemGenerator.py  test_bills.py  test_core_Base.py  test_core_ItemGenerator.py  test_core_pupatype_meta.py  test_events_search_NewYork.py  test_parsing.py  test_pupatype_meta.py  test_scrape_Chicago.py  test_scrape_NewYork.py  test_scrape_people_NewYork.py  test_search.py  utils.py
tests/test_event_search/: test_event_search.py
(+29 files in other folders)
